<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
        <TextView
                android:layout_marginRight="@dimen/tv_add_margin"
                android:layout_marginLeft="@dimen/tv_add_margin"
                android:layout_marginBottom="@dimen/label_add_tv_margin"
                android:textSize="@dimen/add_textSize"
                android:text="@string/VIN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                    android:layout_marginBottom="@dimen/tv_add_margin"
                    android:layout_marginRight="@dimen/tv_add_margin"
                    android:layout_marginLeft="@dimen/tv_add_margin"
                    android:id="@+id/etVIN"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapCharacters"
                    android:shadowColor="@color/colorPrimary" style="@style/Widget.AppCompat.EditText"
                    android:textColorHighlight="@color/colorPrimaryDark" android:textColorLink="@color/colorPrimary"
                    android:textCursorDrawable="@color/colorPrimary"/>
        <TextView
                android:layout_marginRight="@dimen/tv_add_margin"
                android:layout_marginLeft="@dimen/tv_add_margin"
                android:layout_marginBottom="@dimen/label_add_tv_margin"
                android:textSize="@dimen/add_textSize"
                android:text="@string/Mark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <EditText
                android:layout_marginBottom="@dimen/tv_add_margin"
                android:layout_marginRight="@dimen/tv_add_margin"
                android:layout_marginLeft="@dimen/tv_add_margin"
                android:id="@+id/etMark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:shadowColor="@color/colorPrimary"
                android:textColorHighlight="@color/colorPrimaryDark" android:textColorLink="@color/colorPrimary"
                android:textCursorDrawable="@color/colorPrimary"/>

        <TextView
                android:layout_marginRight="@dimen/tv_add_margin"
                android:layout_marginLeft="@dimen/tv_add_margin"
                android:layout_marginBottom="@dimen/label_add_tv_margin"
                android:textSize="@dimen/add_textSize"
                android:text="@string/Model"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <EditText
                android:layout_marginBottom="@dimen/tv_add_margin"
                android:layout_marginRight="@dimen/tv_add_margin"
                android:layout_marginLeft="@dimen/tv_add_margin"
                android:id="@+id/etModel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:shadowColor="@color/colorPrimary"
                android:textColorHighlight="@color/colorPrimaryDark" android:textColorLink="@color/colorPrimary"
                android:textCursorDrawable="@color/colorPrimary"/>

        <TextView
                android:layout_marginRight="@dimen/tv_add_margin"
                android:layout_marginLeft="@dimen/tv_add_margin"
                android:layout_marginBottom="@dimen/label_add_tv_margin"
                android:textSize="@dimen/add_textSize"
                android:text="@string/Number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <EditText
                android:layout_marginBottom="@dimen/tv_add_margin"
                android:layout_marginRight="@dimen/tv_add_margin"
                android:layout_marginLeft="@dimen/tv_add_margin"
                android:id="@+id/etNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapCharacters"
                android:shadowColor="@color/colorPrimary"
                android:textColorHighlight="@color/colorPrimaryDark" android:textColorLink="@color/colorPrimary"
                android:textCursorDrawable="@color/colorPrimary"/>

        <TextView
                android:layout_marginRight="@dimen/tv_add_margin"
                android:layout_marginLeft="@dimen/tv_add_margin"
                android:layout_marginBottom="@dimen/label_add_tv_margin"
                android:textSize="@dimen/add_textSize"
                android:text="@string/Tasks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <com.androidbuts.multispinnerfilter.MultiSpinnerSearch
                android:id="@+id/spinnerTasks"
                android:layout_marginBottom="@dimen/tv_add_margin"
                android:layout_marginRight="@dimen/tv_add_margin"
                android:layout_marginLeft="@dimen/tv_add_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:spinnerMode="dialog"/>

        <TextView
                android:layout_marginRight="@dimen/tv_add_margin"
                android:layout_marginLeft="@dimen/tv_add_margin"
                android:layout_marginBottom="@dimen/label_add_tv_margin"
                android:textSize="@dimen/add_textSize"
                android:text="@string/Info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <EditText
                android:layout_marginBottom="@dimen/tv_add_margin"
                android:layout_marginRight="@dimen/tv_add_margin"
                android:layout_marginLeft="@dimen/tv_add_margin"
                android:id="@+id/etInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapCharacters"
                android:shadowColor="@color/colorPrimary"
                android:textColorHighlight="@color/colorPrimaryDark" android:textColorLink="@color/colorPrimary"
                android:textCursorDrawable="@color/colorPrimary"/>

        <Button
                android:layout_marginRight="@dimen/tv_add_margin"
                android:layout_marginLeft="@dimen/tv_add_margin"
                android:id="@+id/btnAddToList"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/Add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
</ScrollView>